impulse-native-bridge/include/engine/joint.h

  /**
   * Returns whether the joint motor is enabled.
   *
   * @param joint_id The ID of the target joint.
   * @return True if motor is enabled, false otherwise.
   */
  API bool eng_joint_is_motor_enabled(uint32_t space_id, uint64_t joint_id);
  /**
   * Enables or disables the joint motor.
   *
   * @param joint_id The ID of the target joint.
   * @param enabled  True to enable, false to disable.
   */
  API void eng_joint_set_motor_enabled(uint32_t space_id, uint64_t joint_id, bool enabled);
  /**
   * Returns the configured target motor velocity.
   *
   * @param joint_id The ID of the target joint.
   * @return The target velocity.
   */
  API float eng_joint_get_motor_target_velocity(uint32_t space_id, uint64_t joint_id);
  /**
   * Returns the configured maximum motor force.
   *
   * @param joint_id The ID of the target joint.
   * @return The maximum force.
   */
  API float eng_joint_get_motor_max_force(uint32_t space_id, uint64_t joint_id);
  /**
   * Sets the motor velocity and maximum force.
   *
   * @param joint_id       The ID of the target joint.
   * @param targetVelocity The desired velocity.
   * @param maxForce       The maximum force.
   */
  API void eng_joint_set_motor(uint32_t space_id, uint64_t joint_id, float targetVelocity, float maxForce);
  /**
   * Returns the spring rest length.
   *
   * @param joint_id The ID of the target joint.
   * @return The rest length, or NaN if not a spring joint.
   */
  API float eng_joint_get_spring_rest_length(uint32_t space_id, uint64_t joint_id);
  /**
   * Returns the spring stiffness.
   *
   * @param joint_id The ID of the target joint.
   * @return The stiffness, or NaN if not a spring joint.
   */
  API float eng_joint_get_spring_stiffness(uint32_t space_id, uint64_t joint_id);
  /**
   * Returns the spring damping.
   *
   * @param joint_id The ID of the target joint.
   * @return The damping, or NaN if not a spring joint.
   */
  API float eng_joint_get_spring_damping(uint32_t space_id, uint64_t joint_id);