impulse-native-bridge/impulse-ffi/src/ffi_engine.rs

unsafe extern "C" {
    pub fn eng_joint_is_motor_enabled(space_id: u32, joint_id: u64) -> bool;
}
unsafe extern "C" {
    pub fn eng_joint_set_motor_enabled(space_id: u32, joint_id: u64, enabled: bool);
}
unsafe extern "C" {
    pub fn eng_joint_get_motor_target_velocity(space_id: u32, joint_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_joint_get_motor_max_force(space_id: u32, joint_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_joint_set_motor(space_id: u32, joint_id: u64, targetVelocity: f32, maxForce: f32);
}
unsafe extern "C" {
    pub fn eng_joint_get_spring_rest_length(space_id: u32, joint_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_joint_get_spring_stiffness(space_id: u32, joint_id: u64) -> f32;
}
unsafe extern "C" {
    pub fn eng_joint_get_spring_damping(space_id: u32, joint_id: u64) -> f32;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_locale_data {
    pub _address: u8,
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct __crt_multibyte_data {
    pub _address: u8,
}
